Added clean flybasemine directory.  Dockerfile w/ webapp code and tomcat.